kubernetes/concrete-intermediary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concrete-disp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concrete-disp
  template:
    metadata:
      labels:
        app: concrete-disp
    spec:
      containers:
      - name: concrete-disp
        image: oydeu/dc-intermediary:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: concrete-disp
spec:
  selector:
    app: concrete-disp
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: concrete-disp
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - concrete.go-data.at
    secretName: concrete-disp-tls
  rules:
  - host: concrete.go-data.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: concrete-disp
            port:
              number: 80
